# epicenter

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  FINANCIAL_SUSTAINABILITY.md  LICENSE  README.md  SECURITY.md  biome.jsonc  jsrepo.config.ts  package.json  prompt.md  skills-lock.json
.changeset/: attach-timeline-deleted-plain-text-body.md  attach-timeline-single-text-body.md  attach-timeline-text-path.md  child-doc-worker-internal.md  filesystem-drop-dead-sheet-residue.md
.claude/skills/: agent-instructions  first-read-review  fresh-context-review  govuk-style
.github/workflows/: README.md  ci.format.yml  ci.runtime-parity.yml  deploy.cloudflare-preview.yml  deploy.cloudflare.yml  local-mail.gmail-drift.yml  pr-preview.whispering.yml
.pi/: settings.json
apps/: README.md
apps/api/: .env.example  README.md  better-auth.config.ts  (+7 more)
apps/epicenter/src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json  tauri.dev.conf.json
apps/epicenter/src-tauri/capabilities/: trusted-epicenter-apps-development.json  trusted-epicenter-apps-production.json  trusted-query-development.json  trusted-query-production.json  trusted-whispering-native-development.json  trusted-whispering-native-production.json  trusted-whispering-overlay-development.json  trusted-whispering-overlay-production.json
apps/epicenter/src-tauri/frontend-placeholder/: index.html
apps/epicenter/src-tauri/permissions/autogenerated/: cancel_recording.toml  clear_recording_artifacts.toml  close_recording_session.toml  delete_model.toml  delete_recording_artifacts.toml  download_model.toml  encode_recording_for_upload.toml  enumerate_recording_devices.toml  get_current_recording_id.toml  get_dictation_capability.toml  get_microphone_permission.toml  get_runtime_info.toml  init_recording_session.toml  is_autostart_enabled.toml  keyring_read.toml  keyring_write.toml  list_models.toml  pause_playback.toml  prewarm_model.toml  read_recording_artifact.toml  replace_global_shortcuts.toml  request_accessibility_permission.toml  request_microphone_permission.toml  resume_playback.toml  set_auto_paste_enabled.toml  set_autostart_enabled.toml  set_unload_policy.toml  simulate_copy_keystroke.toml  simulate_enter_keystroke.toml  transcribe_recording.toml  write_text.toml
apps/epicenter/src-tauri/src/: command.rs  delivery.rs  keyring_storage.rs  lib.rs  main.rs  overlay.rs  shell.rs  timing.rs
apps/epicenter/src-tauri/src/audio/: command.rs  decode.rs  encode.rs  mod.rs  resample.rs
apps/epicenter/src-tauri/src/keyboard/: commands.rs  event.rs  mac_tap.rs  mod.rs  supervisor.rs
apps/epicenter/src-tauri/src/recorder/: artifact.rs  commands.rs  error.rs  mod.rs  recorder.rs
apps/epicenter/src-tauri/src/transcription/: catalog.rs  model_cache.rs
apps/epicenter/src-tauri/tests/: decode_fixtures.rs
apps/epicenter/src-tauri/tests/fixtures/: sine_440_2s.m4a  sine_440_2s.opus  sine_440_2s.webm
apps/honeycrisp/src-tauri/: Cargo.toml  tauri.conf.json
apps/honeycrisp/src-tauri/capabilities/: main-window.json
apps/honeycrisp/src-tauri/icons/: icon.icns
apps/honeycrisp/src-tauri/src/: keyring_storage.rs  lib.rs  main.rs
apps/local-mail/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
apps/local-mail/src-tauri/capabilities/: default.json
apps/local-mail/src-tauri/icons/: icon.icns
apps/local-mail/src-tauri/placeholder-dist/: index.html
apps/local-mail/src-tauri/src/: lib.rs  main.rs
apps/matter/src-tauri/: Cargo.toml  tauri.conf.json
apps/matter/src-tauri/capabilities/: default.json
apps/matter/src-tauri/src/: entry.rs  lib.rs  watch.rs
docs/: CONTEXT.md  architecture.md  positioning.md  scripting.md  spec-history.md  trust-model.md
ops/: .infisical.json  package.json  tsconfig.json
patches/: y-indexeddb@9.0.12.patch
scripts/: bump-version.ts  check-doc-hygiene.test.ts  check-doc-hygiene.ts  check-doc-paths.test.ts  check-doc-paths.ts  generate-spec-history.ts
specs/: 20260124T004528-versioned-table-api-design.md  20260124T160000-developer-experience-schema-api.md  20260125T120000-versioned-table-kv-specification.md  20260126T103000-table-api-split.md  20260202T145245-consolidate-workspace-definition-inside-folder.md  20260219T195800-server-architecture-rethink.md  20260313T224500-unify-document-content-model.md  20260315T170000-flatten-timeline-into-handle.md  20260504T040000-machine-auth-adopt-better-auth-device-client.md  20260506T183459-encryption-keys-clean-break.execute.md  20260507T054727-opensidian-tab-manager-create-session.md  20260510T230000-auth-contracts-arktype-morphs.md  20260512T161042-async-storage-and-build-unification.md  20260512T220000-session-two-axis-cohesive-reshape.handoff.prompt.md  20260512T234944-source-installed-app-runtime-vision.md  20260513T190000-schema-on-npm-runtime-on-jsrepo.md  20260513T200000-workspace-surface-clean-break-vision.md  20260513T220000-document-sync-and-identity-collapse.md  20260514T013918-source-app-manifest-bridge-slice.md  20260514T160000-execute-id-token-and-oob-cli.md  20260514T160000-script-surfaces-resolution.md  20260515T010000-auth-post-oob-collapse-audit.md  20260515T140000-daemon-run-clean-break.md  20260519T150000-epicenter-project-as-first-class.md  20260522T160000-revert-cloud-workspace-sync-layer.md  20260522T240000-cloud-asset-access-model.md  20260524T021140-asset-visibility-and-client-sdk.md  20260525T130000-creative-os-composition-map.md  20260525T220511-workspace-primitive-bundle.md  20260528T130000-runtime-port-and-public-origin.md  20260530T160000-uniform-per-doc-providers.md  20260602T233000-composable-apps-islands-hosts-and-capabilities.md  20260612T063520-landing-page-public-realignment.md  20260612T091000-whispering-custom-backend-profiles.md  20260612T110000-whispering-pipelines-workspace-boundary.md  20260612T182447-workspace-schema-conformance.handoff.md  20260612T182447-workspace-schema-conformance.md  20260612T193000-table-read-surface.handoff.md  20260614T160000-zero-knowledge-relay-and-collaborative-fields.md  20260616T225034-workers-buildout.tracker.md  (+35 more)
(+1032 files in other folders)
