[package]
name = "epicenter"
version = "0.0.1"
description = "The Epicenter desktop application host"
authors = ["Epicenter"]
repository = "https://github.com/EpicenterHQ/epicenter"
edition = "2021"

[package.metadata]
cargo-target-macos-version = "10.15"

[lib]
name = "epicenter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
cpal = "0.18.1"
enigo = "0.5.0"
getrandom = "0.3"
hf-hub = { version = "0.5", features = ["tokio"] }
hound = "3.5"
keyring = "4"
lazy_static = "1.4"
log = "0.4"
ogg = "0.9"
rayon = "1.10"
rubato = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "=2.0.0-rc.25"
specta-typescript = "=0.0.12"
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4"] }
tauri = { version = "2.11", features = ["macos-private-api", "image-png", "tray-icon"] }
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2.7"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-opener = "2.5"
tempfile = "3.8"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
transcribe-cpp = { version = "0.1.0", default-features = false }
audiopus = "0.3.0-rc.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Media_Control", "Foundation", "Foundation_Collections", "Win32_System_Com"] }
winreg = "0.55"

[target.'cfg(all(windows, target_arch = "x86_64"))'.dependencies]
transcribe-cpp = { version = "0.1.0", default-features = false, features = ["dynamic-backends", "vulkan"] }

[target.'cfg(all(windows, target_arch = "aarch64"))'.dependencies]
transcribe-cpp = { version = "0.1.0", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.1.3"
core-foundation-sys = "0.8.7"
core-foundation = "0.9"
core-graphics = "0.22"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSPasteboard", "NSPasteboardItem"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSString", "NSData", "NSArray"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", rev = "a3122e894383aa068ec5365a42994e3ac94ba1b6" }
transcribe-cpp = { version = "0.1.0", default-features = false, features = ["metal"] }

[target.'cfg(target_os = "linux")'.dependencies]
transcribe-cpp = { version = "0.1.0", default-features = false, features = ["dynamic-backends", "vulkan"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2.4", features = ["deep-link"] }

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
strip = true
