[package]
name = "honeycrisp"
version = "0.0.2"
description = "Local-first notes app"
authors = ["Epicenter"]
repository = "https://github.com/EpicenterHQ/epicenter"
edition = "2021"

[lib]
name = "honeycrisp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# OS credential store for the persisted OAuth grant (src/keyring_storage.rs):
# Keychain Services on macOS, Credential Manager on Windows, Secret Service
# (via zbus, pure Rust) on Linux. The default `v1` feature already selects the
# right native backend per platform, so no per-OS feature flags are needed.
keyring = "4"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-window-state = "2"
thiserror = "2"
