[package]
name = "local-mail"
version = "0.0.1"
description = "Local Mail desktop shell: a native window over the local Bun mail engine"
authors = ["Epicenter"]
repository = "https://github.com/EpicenterHQ/epicenter"
edition = "2021"

[lib]
# `local_mail_lib` so `main.rs` can call `local_mail_lib::run()`, matching the
# repo's other Tauri shells (matter, honeycrisp).
name = "local_mail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# The shell owns the window and the child engine's lifecycle only. No plugins:
# it spawns the Bun engine with std::process, reads the origin it prints, and
# opens a WebviewUrl::External window at it. Rust never touches Gmail tokens,
# mail data, or the loopback bearer (ADR-0116).
tauri = { version = "2", features = [] }
